--- a/src/App.css
+++ b/src/App.css
@@ -1,65 +1,93 @@
 
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+/* background-color:#fccc45; Yello*/
+/* background-color: #003b91; Blue */
+/* background-color:lightgreen; */
 
 
-*{
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+ 
 }
-.header{ 
-  width: 100%;  
-  height: 10rem;
-  background-color: lightgreen;
+
+.header {
+  width: 100%;
+  height: 8rem;
+  background-color:#fccc45;
+  color: white;
+   /* opacity: .9; */
   /* z-index: 3;   */
 }
-.header-main{
- width: 100%;
+
+.header-main {
+  width: 100%;
   padding: 0 5%;
   position: fixed;
-  background-color: lightgreen;
-  z-index: 1; 
+  background-color: #003b91;
+  color: white;
+  z-index: 1;
 }
-.nav-bar-top{  
+
+.nav-bar-top {
 
   padding: 1rem 0 0 0;
   display: flex;
   justify-content: space-between;
-  justify-items: center; 
-  
+  justify-items: center;
+
 }
-.link{
+
+.header-link {
+  color: white;
   text-decoration: none;
   font-size: 1.3rem;
-  
 }
-.li{
+.header-logo{
+  color: greenyellow;
+}
+.header-logo-span{
+  color:#fccc45;
+}
+
+.logo>li {
   list-style-type: none;
 }
-.nav-main-bar{
+
+.nav-main-bar {
   padding: 1rem 0;
-  /* background-color: greenyellow; */
   display: flex;
   /* column-gap: 1rem; */
 
 }
-.nav-main-bar>li{
+.nav-main-bar>link{
+  color: white;
+
+  background-color: white;
+}
+
+.nav-main-bar>li {
   width: 8%;
   list-style-type: none;
+ 
 }
 
-.logo{
+.logo {
   font-size: 1.5rem;
 }
-.nav-icon{
+
+.nav-icon {
+  background-color:lightgreen;
   width: 15%;
-}
-.nav-icon-tour{
-  width: 15%;
+ 
 }
 
-.nav-bar-list{
+
+
+.nav-bar-list {
   /* margin-right: 5%; */
   width: 40%;
   display: flex;
@@ -69,19 +97,23 @@
 
 
 }
-.nav-bar-list> li{
+
+.nav-bar-list>li {
   font-size: 1.3rem;
   font-weight: 300;
-  
+
 }
-.nav-bar-list> li:hover{
+
+.nav-bar-list>li:hover {
   background-color: rgb(234, 206, 206);
   transform: scale(1.1);
-}.login{
+}
+
+.login {
   /* width: 3%; */
 }
 
-.banner{
+.banner {
   margin: 0 0 2rem 0;
   width: 100%;
   /* background-color: Green; */
@@ -92,37 +124,41 @@
 
 
 }
-.banner-firm{ 
-  width: 90%; 
-  position: relative; 
+
+.banner-firm {
+  width: 90%;
+  position: relative;
   margin-bottom: 3rem;
 }
-.banner.div{
+
+.banner.div {
   width: 200%;
   background-color: red;
   padding: 20px;
-  
+
 }
-.banner-pre-next{
+
+.banner-pre-next {
   width: 200%;
   background-color: green;
   padding: 20px;
 }
 
-.banner-slid{
-  width: 100%; 
-  
+.banner-slid {
+  width: 100%;
+
 
 }
-.banner-slid>h3{
+
+.banner-slid>h3 {
   width: max-content;
-  background-color:lightgreen;
-  color:blue;
+  background-color: lightgreen;
+  color: blue;
   font-size: 1.3rem;
 }
 
 
-.btnicon{
+.btnicon {
   padding: .7rem;
   background-color: rgba(119, 10, 10, 0.1);
   border-radius: 50%;
@@ -132,53 +168,56 @@
 
 }
 
-.button-pre-next{
+.button-pre-next {
   width: 100%;
   padding: 10px 10px;
   position: absolute;
-  top:35%;
+  top: 35%;
   background-color: rgb(109, 128, 0);
   color: black;
   display: flex;
   justify-content: space-between;
 }
-.btnicon:hover{
+
+.btnicon:hover {
   background-color: rgba(0, 0, 0, 1);
-  
+
 }
-.banner-image{
+
+.banner-image {
   width: 100%;
   height: 450px;
- 
+
 }
 
 
 
-.icon-pre-next{
+.icon-pre-next {
   font-size: 2rem;
   /* font-weight: 500; */
-  color:white;
+  color: white;
 }
 
-.image-title{
+.image-title {
   font-size: 1.5rem;
   width: max-content;
   background-color: rgb(212, 222, 212);
   display: flex;
 }
-.image-title:hover{
+
+.image-title:hover {
   transform: scale(1.1);
 }
 
 /* Torus and Trekking Middle Bar */
-.middlebar-section{
- 
+.middlebar-section {
+
   display: flex;
   justify-content: center;
   margin: 1rem 0;
 }
 
-.middlebar{
+.middlebar {
   margin: 0 4rem 0 2rem;
   width: 100%;
   /* background-color: lightgreen; */
@@ -186,28 +225,32 @@
   justify-content: center;
   align-items: center;
   column-gap: 2rem;
-  
+
 }
 
-.tours-title , .treking-title, .booking  {
+.tours-title,
+.treking-title,
+.booking {
   padding: .5rem;
   background-color: lightgreen;
   border: 1px solid lightgreen;
   border-radius: .5rem;
-  
-}
-.middle-link{
- text-decoration: none;  
+
 }
 
-.middlebtn:hover, .middlebtn:active{
+.middle-link {
+  text-decoration: none;
+}
+
+.middlebtn:hover,
+.middlebtn:active {
   background-color: rosybrown;
 }
 
 
 /* Treking */
-.tours{  
-  padding: 0 5% ;
+.tours {
+  padding: 0 5%;
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -216,56 +259,62 @@
 
 }
 
-.treking-main{
+.treking-main {
   padding: 0 5%;
   width: 100%;
   /* background-color: greenyellow; */
 }
-.treking-main>h3{
+
+.treking-main>h3 {
   width: max-content;
   /* margin-left: 1%; */
   background-color: lightgreen;
   color: royalblue;
   font-size: 1.3rem;
 }
-.treking{ 
-  width: 100%;
-  display: flex; 
-  justify-content: center; 
-  /* background-color: rgb(239, 236, 236); */
-  position: relative;
-  
-}
-.treking-div{
+
+.treking {
   width: 100%;
   display: flex;
-  justify-content: space-between;}
-.button-pre-next-treking{
-  padding: 0 1rem 0 ;
-  width: 99%;  
+  justify-content: center;
+  /* background-color: rgb(239, 236, 236); */
+  position: relative;
+
+}
+
+.treking-div {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.button-pre-next-treking {
+  padding: 0 1rem 0;
+  width: 99%;
   position: absolute;
-  top:35%;
+  top: 35%;
   display: flex;
   justify-content: space-between;
 
 }
 
-.btnicon{
+.btnicon {
   width: 3rem;
   text-align: center;
   font-size: 2rem;
   color: aliceblue;
-  
+
 }
 
 
- .tourpakage{
+.tourpakage {
   width: 23%;
   border: 1px solid rgb(215, 211, 207);
   border-radius: .5rem;
 
 }
-.trekingpakage{
+
+.trekingpakage {
   padding: .5rem;
   width: 23%;
   border: 1px solid rgb(215, 211, 207);
@@ -275,113 +324,168 @@
 
 }
 
-.treking-image-div{
+.treking-image-div {
   /* display: flex;
   justify-content: center; */
 }
-.treking-image, .tour-image{
+
+.treking-image,
+.tour-image {
   width: 100%;
- 
+
 }
 
 /* .treking-image:hover{
   transform: scale(1.3);
 } */
 
-.tour-image:hover{
+.tour-image:hover {
   transform: scale(1.3)
 }
+
 /* Booking Component */
 
-.booking-main{
+.booking-main {
   margin-top: 5rem;
   margin-bottom: 3rem;
   padding: 3rem;
   background-color: rgb(196, 222, 196);
 }
 
-.slider-bar{
+.slider-bar {
   display: flex;
   justify-content: center;
 }
 
-.main-slider{
+.main-slider {
   margin-left: 3rem;
   width: 90%;
   background-color: lightgray;
 
- 
+
   flex-direction: column;
   margin-bottom: 2rem;
 
 }
-.slider{
- 
+
+.slider {
+
   background-color: greenyellow;
   padding: 3rem;
 }
 
-.statevariable{
+.statevariable {
   padding: 3rem;
   width: 100%;
   background-color: lightgrey;
   display: flex;
   justify-content: space-between;
 }
-.country{
+
+.country {
   background-color: lightgreen;
   border: 1px solid green;
 }
 
 /* About US */
-.aboutus{
- padding: 1rem 5% ;
+.aboutus-header {
+  padding: 1rem 10%;
+  /* background-color: #a0f2de; */
 }
-.aboutus-detail{
+.aboutus-section{
+  margin-bottom: 1rem;
+  background-color:whitesmoke;
+  border: 2px soled lightgray;
+  border-radius: 1.1rem;
+}
+.aboutus-section>h3{
+  font-size: 1.5rem;
   padding: .5rem 0;
 }
-.aboutus-detail>ul{
+.aboutus-section>p{
+  padding-left: 1rem;
+  font-size: 1.1rem;
+}
+
+.aboutus-detail {
+  padding: .5rem 0;
+}
+
+.aboutus-detail>ul {
   padding: 0 .5rem;
 }
+
+/* Services */
+.services-header{
+  padding: 1rem 10%;
+
+}
+.services-section{
+  margin-bottom: 1.5rem;
+  background-color:whitesmoke;
+  border: 2px soled lightgray;
+  border-radius: 1.1rem;
+
+}
+.services-section>h3{
+  font-size: 1.5rem;
+  padding: .5rem 0;
+
+}
+.services-section>p{
+  padding-left: 1rem; 
+  font-size: 1.1rem;
+}
+.services-section>p>ul>li{
+  padding: .3rem;
+}
+
+
+
 /* Trip Information */
-.tripinfo-section{
- 
+.tripinfo-section {
+
   width: 100%;
-  
+
   background-color: yellow;
 }
 
-.tripinfo{
-  padding: .5rem 1%;  
+.tripinfo {
+  padding: .5rem 1%;
   background-color: lightcyan;
   border: 1px solid lightgray;
   border-radius: .3rem;
   background-color: greenyellow;
 }
-.tripinfo-title>h3{
+
+.tripinfo-title>h3 {
   padding: 1rem 0;
   font-size: 2rem;
-  color:black;
+  color: black;
   font-weight: 600;
 }
-.tripinfo-title>h5{
+
+.tripinfo-title>h5 {
   font-size: 1rem;
-  
+
 }
-.tripinfo-title>ul{
+
+.tripinfo-title>ul {
   padding: .5rem 1rem;
 }
 
-.tripinfo-list{
+.tripinfo-list {
   padding: .5rem 5%;
   background-color: lightgray;
 }
-.tripinfo-list-ul{
+
+.tripinfo-list-ul {
   display: flex;
   list-style-type: none;
   justify-content: space-between;
 }
-.tripinfo-list-link{
+
+.tripinfo-list-link {
   padding: .5rem;
   font-size: 1.2rem;
   font-weight: 500;
@@ -390,11 +494,12 @@
   /* background-color: green; */
   border: 1px solid rgb(170, 157, 157);
   border-radius: .5rem;
- 
+
 
 }
-.tripinfo-list-link:hover{
-  background-color:black;
+
+.tripinfo-list-link:hover {
+  background-color: black;
   transition: 1s;
   color: wheat;
   font-size: 1.3rem;
@@ -403,86 +508,102 @@
 
 
 /* OverView  */
-.overview-section{
-  padding: .5rem 1%;  
-  background-color: lightcyan;
-  border: 1px solid lightgray;
+.overview-section {
+  padding: .5rem 1%;
   border-radius: .3rem;
-  
-  /* background-color: green; */
 }
-.overview-title{
- /* font-size: 2rem; */
+
+.overview-title {
+  padding: .5rem;
+ background-color:white;
 }
 
 /* Itinerary */
 
-.itinerary-section{
-  padding: .5rem 1%;
-  background-color: lightcyan;
-  border: 1px solid lightgray;
+.itinerary-section {
+  padding: .5rem;
+ 
   border-radius: .3rem;
-  
-  /* background-color: green; */
+  background-color: white;
 }
-.itinerary{
+
+.itinerary {
   margin-bottom: .5rem;
   display: flex;
-  column-gap: 3rem;
+  column-gap: 1rem;
   align-items: center;
- 
-  /* background-color: yellow; */
 }
 
-.itinerary>h1{
-  padding: .2rem 1rem;
+.itinerary>h1 {
+  padding: .2rem ;
+  font-size: 1.2rem;
   width: max-content;
-  background-color: lightgreen;
+  background-color: #003b91;
   border: 1px solid lightblue;
+  color: white;
   border-radius: .3rem;
 }
 
-.itinerary-detail{
-  padding: .5rem 0;
+.itinerary-detail {
+  padding: .5rem ;
+  background-color: whitesmoke;
   border: .5px solid lightgray;
   border-radius: .3rem;
 }
 
 /* Cost */
-.cost-section{
+.cost-section {
   padding: .5rem 1%;
-  background-color: whitesmoke;
+  background-color: white;
   border: 1px solid lightgray;
   border-radius: .3rem;
 }
 
-.table{
+.table {
   width: 100%;
   /* background-color: lightpink; */
   border-collapse: collapse;
+
+}
+.table-header>th{
+  background-color: lightgray;
+ 
 }
 
-th, td{
+th,
+td {
   padding: .5rem;
-  border: 1px solid lightgray;
+  background-color: whitesmoke;
+  border: 1px solid gray;
   text-align: left;
 }
+.price-includes, .price-excludes{
+  padding: .5rem ;
+}
 
+.price-includes>h3, .price-excludes>h3{
+  padding: .5rem 0;
+}
+
+.price-includes-li, .price-excludes-li{
+  list-style-type: none;
+  padding: .3rem 0 0;
+}
 
 /* State Variable test */
 
-.select-div{
+.select-div {
   padding: 1rem 5%;
   width: 20%;
   background-color: green;
   cursor: pointer;
 }
-.select-image{
+
+.select-image {
   width: 100%;
 }
 
-Itinerary Data Display
-.tripinfo-dashboard{
+Itinerary Data Display .tripinfo-dashboard {
   width: 100%;
   display: flex;
   justify-content: space-between;
@@ -491,53 +612,69 @@ Itinerary Data Display
 
 
 /* Trekking Section Start Here */
-.trek-header{
+.trek-header {
   padding: 1rem 0;
   width: 100%;
   /* background-color: red; */
-  display: flex; 
+  display: flex;
   justify-content: center;
 
 }
 
-.trek-header-section{
+.trek-header-section {
   padding: 0 3%;
   width: 100%;
   /* background-color: red; */
-  display: flex; 
+  display: flex;
   justify-content: center;
 
 }
-.trek-main{
+
+.trek-main {
   width: 85%;
   /* background-color: gray; */
 
 }
-.trek-title{
-  background-color:#63aee1;
+
+.trek-title {
+  font-size: .8rem;
+  /* background-color:  #003b91; */
+  /* background-color: #ff7f35; */
+
+ 
 }
-.trek-image{
-  width: 100%;
-}
-.trek-image-banner{
-  width: 100%;
-  height:25rem;
+.trek-tilte-fontpage{
+  background-color:#fccc45;
+ 
+
 }
 
-.trek-itinerary{
-  /* padding: .5rem 1rem; */
+.trek-image {
+  width: 100%;
+}
+
+.trek-image-banner {
+  width: 100%;
+  height: 25rem;
+}
+
+.trek-itinerary {
+  /* padding: .5rem .5rem; */
   width: 100%;
   /* background-color: gray; */
 }
-.trek-itinerary-dashboard{
+
+.trek-itinerary-dashboard {
+  padding: 0 .5rem;
   width: 100%;
   background-color: lightgreen;
-  display: flex; 
+  display: flex;
   align-items: center;
   flex-wrap: wrap;
-  
+
 }
-.trek-dashboard-box{
+
+.trek-dashboard-box {
   width: 20%;
   /* background-color: gray; */
   display: flex;
@@ -546,51 +683,68 @@ Itinerary Data Display
   padding: .5rem 0;
 }
 
-.trek-highlight{
+.trek-highlight {
   padding: .5rem 0;
   width: 100%;
 
 }
-.trek-highlight>ul>li{
+.trek-highlight>ul>h3{
+  padding-bottom: .5rem;
+}
+
+.trek-highlight>ul>li {
   padding-left: 1%;
   list-style-type: none;
 
 }
 
-.trek-list-ul{
+.trek-list-ul {
   width: 100%;
-  background-color: lightpink;
-  display:flex;
+  background-color: #003b91;
+  display: flex;
   justify-content: space-around;
 }
-.trek-list-ul>li{
+
+.trek-list-ul>li {
   list-style-type: none;
   font-size: 1.5rem;
   cursor: pointer;
-}
-.trek-list-ul>li:hover{
 
-  border: 1px solid lightgray;
+}
+.trek-list-link{
+  color:white;
+  text-decoration: none;
+
+}
+
+.trek-list-ul>li:hover {
+
+  border: 1px solid lightgreen;
   border-radius: .3rem;
-  background-color: lightgreen;
+  background-color:green;
+ 
 
 
 }
 
-.outlet{
-  padding: 3rem;
+.outlet {
+  padding: .5rem;
   width: 100%;
-  background-color: royalblue;
+  background-color: #fccc45;
 }
 
 
 /* Trek Banner Right Side */
 
-.trek-banner-rightside{
+.trek-banner-rightside {
+  margin-top: 1.8rem;
   width: 15%;
-  /* background-color:skyblue; */
-}
-.trek-banner-rightside-main{
+ }
+ .trek-banner-rightside-frontpage{
+  margin-top: 0;
+ }
+
+.trek-banner-rightside-main {
 
   background-color: whitesmoke;
   text-align: center;
@@ -598,51 +752,55 @@ Itinerary Data Display
   border-radius: .3rem;
 
 }
-.trek-banner-rightside-main>h4{
+
+.trek-banner-rightside-main>h4 {
   padding-bottom: 1rem;
 }
-.trek-banner-rightside-image{
-  height: 30%;
-  /* background-color: green; */
-  margin: 1rem 0;
-}
-.trek-banner-rightside-bookingimage{
-  width: 100%;
-  padding-top: 1.22rem;
+
+.trek-banner-rightside-image {
+  height: 30%; 
 }
 
-.banner-booknow{
+.trek-banner-rightside-bookingimage {
+ 
+  width: 100%;
+
+}
+
+.banner-booknow {
   padding: .3rem .7rem;
   margin: .5rem 0;
   border-radius: .3rem;
   background-color: yellowgreen;
 }
-.banner-booknow:hover{
+
+.banner-booknow:hover {
   background-color: skyblue;
 }
 
 
 /* Booking Form */
 
-.bookingform-section{ 
+.bookingform-section {
   padding: .3rem 3%;
   width: 100%;
   /* background-color: yellowgreen; */
 }
 
-.bookingform-main{
-  
+.bookingform-main {
+
   width: 70%;
   /* height: 30rem; */
   /* background-color: gray; */
- 
+
 }
-.bookingform-title{
+
+.bookingform-title {
   padding: .3rem .5rem;
   background-color: rgba(0, 255, 0, .7);
 }
 
-.bookingform-data{
+.bookingform-data {
   padding: 0 .5rem;
   width: 100%;
   background-color: rgba(255, 255, 255, 0.5);
@@ -650,18 +808,22 @@ Itinerary Data Display
   flex-direction: column;
   font-size: 1.2rem;
 }
-.tripform{
+
+.tripform {
   display: flex;
   flex-direction: column;
 
 }
-.formdivmargin{
+
+.formdivmargin {
   margin-top: .9rem;
 }
-.tripname{
+
+.tripname {
   font-size: .9rem;
 }
-.inputheight{
+
+.inputheight {
   height: 1.9rem;
   text-indent: .2rem;
   border: 1px solid black;
@@ -669,64 +831,107 @@ Itinerary Data Display
 
 }
 
-.nameaddressphone{
+.nameaddressphone {
 
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-.commonNEP{
+
+.commonNEP {
   width: 30%;
   display: flex;
   flex-direction: column;
 }
-.arrivaldeparture{
- 
+
+.arrivaldeparture {
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 
 }
-.commonAD{
+
+.commonAD {
   width: 45%;
   display: flex;
   flex-direction: column;
 
 }
 
-.nationality{
+.nationality {
   width: 45%;
   display: flex;
   flex-direction: column;
- 
- 
+
+
 }
+
 .additionalrequirement {
   margin-bottom: .3rem;
   width: 100%;
   display: flex;
   flex-direction: column;
 }
-.textareaAR{
+
+.textareaAR {
   font-size: 1rem;
 
-  padding: .3rem ;
+  padding: .3rem;
 
 
 }
 
-.form-btn{
+.form-btn {
   font-size: 1rem;
   width: max-content;
   padding: .3rem .5rem;
-  background-color:green;
+  background-color: green;
   border: 1px solid gray;
   border-radius: .5rem;
 }
-.form-btn{
+
+.form-btn {
   background-color: skyblue;
 }
 
+/* Contact */
+.contact-section{
+  padding: 0 5% ;
+  width: 100%; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+}
+.contact-main{
+  width: 70%;
+  margin-bottom: 1rem;
+  
+}
+.contact-data{
+  width: 50%;
+ 
+
+}
+.contact-commondiv{
+  width: 100%;
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  column-gap: 5rem;
+}
+.contactNEP{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.contact-input-common{
+  height: 1.9rem;
+  text-indent: .3rem;
+ 
+}
 
 
 
@@ -734,14 +939,15 @@ Itinerary Data Display
 
 /* Test React section- */
 
-.useeffect-header{
+.useeffect-header {
 
   padding: .3rem 3%;
   width: 100%;
   background-color: lightgreen;
-  
+
 }
-.product{
+
+.product {
   padding: 1rem 2rem;
   width: max-content;
   margin: 5px;
@@ -749,7 +955,7 @@ Itinerary Data Display
 }
 
 /* Callback Section */
-.callback-header{
+.callback-header {
   padding: .3rem 3%;
   margin: 1rem 0;
   width: 100%;
@@ -758,12 +964,13 @@ Itinerary Data Display
 
 /* Registration */
 
-.registration-header{
+.registration-header {
   width: 100%;
   /* background-color:lightgreen; */
-  
+
 }
-.registration-section{
+
+.registration-section {
   width: 100%;
   height: 100vh;
   padding: .5rem 3%;
@@ -773,9 +980,10 @@ Itinerary Data Display
   align-items: center;
   /* justify-content: center; */
   /* align-items: flex-start; */
- 
+
 }
-.registration-form{
+
+.registration-form {
   padding: 5rem .5rem;
   width: 20%;
   /* height: 20rem; */
@@ -784,13 +992,14 @@ Itinerary Data Display
   row-gap: .5rem;
   background-color: greenyellow;
 }
-.input-form{
+
+.input-form {
   height: 2rem;
   border: 1px solid black;
   border-radius: .3rem;
 }
 
-.registration-btn{
+.registration-btn {
   width: max-content;
   padding: .3rem .5rem;
   background-color: royalblue;
@@ -798,3 +1007,4 @@ Itinerary Data Display
   border-radius: .3rem;
 
 }
+
