--- a/src/App.css
+++ b/src/App.css
@@ -33,12 +33,10 @@
 }
 
 .nav-bar-top {
-
   padding: 1rem 0 0 0;
   display: flex;
   justify-content: space-between;
   justify-items: center;
-
 }
 
 .header-link {
@@ -65,14 +63,12 @@
 }
 .nav-main-bar>link{
   color: white;
-
   background-color: white;
 }
 
 .nav-main-bar>li {
   width: 8%;
-  list-style-type: none;
- 
+  list-style-type: none; 
 }
 
 .logo {
@@ -81,8 +77,7 @@
 
 .nav-icon {
   background-color:lightgreen;
-  width: 15%;
- 
+  width: 15%; 
 }
 
 
@@ -92,16 +87,12 @@
   width: 40%;
   display: flex;
   justify-content: space-between;
-
   list-style-type: none;
-
-
 }
 
 .nav-bar-list>li {
   font-size: 1.3rem;
   font-weight: 300;
-
 }
 
 .nav-bar-list>li:hover {
@@ -146,8 +137,6 @@
 
 .banner-slid {
   width: 100%;
-
-
 }
 
 .banner-slid>h3 {
@@ -165,7 +154,6 @@
   display: flex;
   justify-content: center;
   text-align: center;
-
 }
 
 .button-pre-next {
@@ -181,13 +169,11 @@
 
 .btnicon:hover {
   background-color: rgba(0, 0, 0, 1);
-
 }
 
 .banner-image {
   width: 100%;
   height: 450px;
-
 }
 
 
@@ -225,7 +211,6 @@
   justify-content: center;
   align-items: center;
   column-gap: 2rem;
-
 }
 
 .tours-title,
@@ -235,7 +220,6 @@
   background-color: lightgreen;
   border: 1px solid lightgreen;
   border-radius: .5rem;
-
 }
 
 .middle-link {
@@ -258,7 +242,9 @@
   /* background-color: rgb(239, 236, 236); */
 
 }
-
+.readmore{
+  color: lightcoral;
+}
 .treking-main {
   padding: 0 5%;
   width: 100%;
@@ -279,7 +265,6 @@
   justify-content: center;
   /* background-color: rgb(239, 236, 236); */
   position: relative;
-
 }
 
 .treking-div {
@@ -295,7 +280,6 @@
   top: 35%;
   display: flex;
   justify-content: space-between;
-
 }
 
 .btnicon {
@@ -303,15 +287,13 @@
   text-align: center;
   font-size: 2rem;
   color: aliceblue;
-
 }
 
 
-.tourpakage {
+.tourpackage {
   width: 23%;
   border: 1px solid rgb(215, 211, 207);
   border-radius: .5rem;
-
 }
 
 .trekingpakage {
@@ -321,7 +303,6 @@
   border-radius: .5rem;
   /* background-color: green; */
   cursor: pointer;
-
 }
 
 .treking-image-div {
@@ -339,9 +320,7 @@
   transform: scale(1.3);
 } */
 
-.tour-image:hover {
-  transform: scale(1.3)
-}
+
 
 /* Booking Component */
 
@@ -444,9 +423,7 @@
 
 /* Trip Information */
 .tripinfo-section {
-
   width: 100%;
-
   background-color: yellow;
 }
 
@@ -563,11 +540,9 @@
   width: 100%;
   /* background-color: lightpink; */
   border-collapse: collapse;
-
 }
 .table-header>th{
-  background-color: lightgray;
- 
+  background-color: lightgray; 
 }
 
 th,
@@ -645,8 +620,6 @@ Itinerary Data Display .tripinfo-dashboard {
 }
 .trek-tilte-fontpage{
   background-color:#fccc45;
- 
-
 }
 
 .trek-image {
@@ -718,13 +691,9 @@ Itinerary Data Display .tripinfo-dashboard {
 }
 
 .trek-list-ul>li:hover {
-
   border: 1px solid lightgreen;
   border-radius: .3rem;
   background-color:green;
- 
-
-
 }
 
 .outlet {
@@ -745,12 +714,10 @@ Itinerary Data Display .tripinfo-dashboard {
  }
 
 .trek-banner-rightside-main {
-
   background-color: whitesmoke;
   text-align: center;
   border: 1px solid lightgrey;
   border-radius: .3rem;
-
 }
 
 .trek-banner-rightside-main>h4 {
@@ -761,10 +728,8 @@ Itinerary Data Display .tripinfo-dashboard {
   height: 30%; 
 }
 
-.trek-banner-rightside-bookingimage {
- 
+.trek-banner-rightside-bookingimage { 
   width: 100%;
-
 }
 
 .banner-booknow {
@@ -784,15 +749,10 @@ Itinerary Data Display .tripinfo-dashboard {
 .bookingform-section {
   padding: .3rem 3%;
   width: 100%;
-  /* background-color: yellowgreen; */
 }
 
 .bookingform-main {
-
   width: 70%;
-  /* height: 30rem; */
-  /* background-color: gray; */
-
 }
 
 .bookingform-title {
@@ -812,7 +772,6 @@ Itinerary Data Display .tripinfo-dashboard {
 .tripform {
   display: flex;
   flex-direction: column;
-
 }
 
 .formdivmargin {
@@ -828,11 +787,9 @@ Itinerary Data Display .tripinfo-dashboard {
   text-indent: .2rem;
   border: 1px solid black;
   border-radius: .3rem;
-
 }
 
 .nameaddressphone {
-
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -845,26 +802,21 @@ Itinerary Data Display .tripinfo-dashboard {
 }
 
 .arrivaldeparture {
-
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-
 }
 
 .commonAD {
   width: 45%;
   display: flex;
   flex-direction: column;
-
 }
 
 .nationality {
   width: 45%;
   display: flex;
   flex-direction: column;
-
-
 }
 
 .additionalrequirement {
@@ -876,10 +828,7 @@ Itinerary Data Display .tripinfo-dashboard {
 
 .textareaAR {
   font-size: 1rem;
-
   padding: .3rem;
-
-
 }
 
 .form-btn {
@@ -900,9 +849,7 @@ Itinerary Data Display .tripinfo-dashboard {
   padding: 0 5% ;
   width: 100%; 
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;  
   margin-top: 2rem;
 }
 .contact-main{
@@ -990,13 +937,20 @@ Itinerary Data Display .tripinfo-dashboard {
   display: flex;
   flex-direction: column;
   row-gap: .5rem;
-  background-color: greenyellow;
+  background-color: #003b91;
+  color: whitesmoke;
+  border: 1px solid gray;
+  border-radius: 1rem;
 }
 
 .input-form {
   height: 2rem;
   border: 1px solid black;
-  border-radius: .3rem;
+  border-radius: .5rem;
+}
+.registration-link{
+  color: lightgoldenrodyellow;
+  text-decoration: none;
 }
 
 .registration-btn {
@@ -1008,3 +962,87 @@ Itinerary Data Display .tripinfo-dashboard {
 
 }
 
+/* Footer Section */
+.footer-header{
+  padding: .5rem 0;
+  width: 100%;
+  background-color:  #003b95;;
+  position:relative;
+  bottom: 0;
+}
+.footer-section{
+  /* background-color: red; */
+}
+.footer-banner{
+  padding: .5rem 5%;
+  /* background-color: yellow; */
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.footer-body{
+ 
+  color:whitesmoke;
+  /* width: 25%; */
+}
+.footer-body>h3{
+  padding-bottom: 1rem;
+  font-size: 1.3rem;
+  font-weight: 300;
+}
+
+.footer-common-div{
+
+  font-family:'Times New Roman', Times, serif; 
+  display: flex;
+ flex-direction: column;
+ row-gap: .5rem;
+}
+.footer-common-div>li{
+  list-style-type: none;
+}
+.footer-common-div>h3{
+  font-size: 1rem;
+  color: whitesmoke;
+
+}
+.footer-link{
+  font-size: 1rem;
+  color: whitesmoke;
+  text-decoration: none;
+}
+.footer-button{
+  padding: .3rem 5%;
+  background-color:#fccc45;;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+/* Why Choose Us */
+.whychooseus-header{
+  padding: .5rem 5%;
+  background-color:whitesmoke;
+  border: 2px solid whitesmoke;
+  border-radius: .3rem;
+}
+.whychooseus-section>h2{
+  color:#003b91 ;
+}
+.whychooseus-header{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  
+}
+.whychooseus-body{
+  margin-top: 1.5rem;
+  padding-bottom: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 3rem;
+  row-gap: 1rem;
+}
+/* background-color:#fccc45; Yello*/
+/* background-color: #003b91; Blue */
